Add tests for ConfigurationAccessor job methods.